# SimpleRenderEngineProject

./: CMakeLists.txt
Exercise4/Engine/Engine/: GameObject.cpp  GameObject.h  MyEngine.cpp  MyEngine.h
Exercise4/ExampleGame/: main.cpp
Exercise4/ExampleGame/Game/: AsteroidController.cpp  AsteroidController.h  ComponentRendererSprite.cpp  LaserController.cpp  LaserController.h  PlayerController.cpp  PlayerController.h
Exercise4/ExampleGame/data/: asteroids.json
Exercise8/Engine/Engine/Components/: ComponentPhysicsBody.cpp
Exercise8/ExampleGame/Game/: ComponentController.cpp  ComponentController.h  ComponentPickup.cpp  ComponentPickup.h  ComponentSpawner.cpp  ComponentSpawner.h
Exercise8/ExampleGame/data/: scene.json
snake/: CMakeLists.txt  main.cpp
snake/data/: snake.json
snake/solution_files/: none.txt  startingpoint.cpp
snake/solution_files/Engine/: Component.h  GameObject.h  MyEngine.cpp  MyEngine.h
snake/solution_files/Game/: Collectible.cpp  Collectible.h  Player.cpp  Player.h  Score.cpp
